// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Notification 1`] = `
<Fade
  in={true}
>
  <div
    className="alert alert-dismissible alert-"
    role="alert"
  >
    <button
      ari-label="Close"
      className="close"
      data-dismiss="alert"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</Fade>
`;

exports[`# NotificationWrapper 1`] = `
<Notification
  notification={
    Object {
      "alertType": "",
      "id": 0,
      "text": "",
    }
  }
  onRemoveNotificationClick={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`# NotificationWrapper 2`] = `
<Notification
  notification={
    Object {
      "alertType": "info",
      "id": 0,
      "text": "Test",
    }
  }
  onRemoveNotificationClick={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;
